Add asteroids to system

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,4 +1,4 @@
-$font-sans: 'Droid Sans';
-$font-mono: 'Droid Sans Mono';
+$font-sans: 'Droid Sans', sans-serif;
+$font-mono: 'Droid Sans Mono', monospace;
 
 $primary-color: #6cd0d9;
